force-app/main/default/objects/CTR_RiskCountry__c.object
<CustomObject>
    <description>CDD Risk Country</description>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdate__c</fullName>
        <label>Last Update (Web)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LevelText__c</fullName>
        <label>Level Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 : ประเทศที่ FATF เรียกร้องให้ใช้มาตรการตอบโต้</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 : ประเทศที่ FATF เรียกร้องให้ใช้มาตรการตรวจสอบเพื่อบทราบข้อเท็จจริง</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 : ประเทศที่ FATF เรียกร้องให้สอดคล้องกับความเสี่ยง</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLatest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLatest</label>
        <type>Checkbox</type>
    </fields>
    <label>CTR Risk Country</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>CTR Risk Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>